<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_options"
        >
        <ListPreference
            android:title="@string/pref_sync_time_title"
            android:summary="@string/pref_sync_time_summary"
            android:key="syncTime"
            android:defaultValue="1440"
            android:entries="@array/syncTimeEntries"
            android:entryValues="@array/syncTimeValues"
        />
        <CheckBoxPreference
            android:title="@string/pref_notifications_title"
            android:summary="@string/pref_notifications_summary"
            android:defaultValue="true"
            android:key="showNotifications"
        />
        <CheckBoxPreference
            android:title="@string/pref_textify_on_title"
            android:summary="@string/pref_textify_on_summary"
            android:key="textify_on"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:title="@string/pref_zoom_controls_title"
            android:summary="@string/pref_zoom_controls_summary"
            android:key="show_zoom_controls"
            android:defaultValue="true"
        />
        <CheckBoxPreference
            android:title="@string/pref_tracking_title"
            android:summary="@string/pref_tracking_summary"
            android:key="tracking"
            android:defaultValue="true"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_data"
        >
        <Preference
            android:title="@string/pref_export_opml_title"
            android:summary="@string/pref_export_opml_summary"
            android:key="export_opml"
        />
        <Preference
            android:title="@string/pref_import_opml_title"
            android:summary="@string/pref_import_opml_summary"
            android:key="import_opml"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_info"
        >
        <!-- hide log viewer for now 
        <Preference
            android:title="@string/pref_view_log_title"
            android:summary="@string/pref_view_log_summary"
            android:key="view_log"
        />
        -->
        <Preference
                android:title="@string/pref_contact_title"
                android:summary="@string/pref_contact_summary"
                android:key="contact"
        />
        <Preference
                android:title="@string/pref_credits_title"
                android:summary="@string/pref_credits_summary"
                android:key="credits"
        />
        </PreferenceCategory>
</PreferenceScreen>